--- a/src/lib/style.css
+++ b/src/lib/style.css
@@ -2,8 +2,8 @@
 .grapes-yw-doc_content{
     max-width: 750px;
     width: 100%;
-    height: 100%;
-    overflow: auto;
+    margin: auto;
+    min-height: 100%;
 }
 .grapes-yw-doc_page{
     padding: 15px;
@@ -11,4 +11,11 @@
     height: 100%;
     display: flex;
     justify-content: center
+}
+
+.grapes-yw-doc_text_column{
+    transition: width 0.2s;
+}
+.grapes-yw-doc_app_column{
+    transition: width 0.2s;
 }
